Fix for bug 86474 (nsFileTransport won't truncate files) Checking in on gordon's behalf, r=gagan, gordon (sr'd previously by darin), a=me