mozilla/netwerk/base/src/nsSocketTransport.cpp
@@ -2327,6 +2327,12 @@ nsSocketIS::Tell(PRUint32 *offset)
     return NS_OK;
 }
 
+NS_IMETHODIMP
+nsSocketIS::SetEOF()
+{
+    return NS_ERROR_NOT_IMPLEMENTED;
+}
+
 //
 //----------------------------------------------------------------------------
 // nsSocketOS
@@ -2452,6 +2458,12 @@ nsSocketOS::Tell(PRUint32 *offset)
     NS_ENSURE_ARG_POINTER(offset);
     *offset = mOffset;
     return NS_OK;
+}
+
+NS_IMETHODIMP
+nsSocketOS::SetEOF()
+{
+    return NS_ERROR_NOT_IMPLEMENTED;
 }
 
 //
